--- a/app/src/main/res/layout/activity_dice_roll.xml
+++ b/app/src/main/res/layout/activity_dice_roll.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.bennettfalkenberg.initiative.DiceRollActivity"
-    android:columnCount="3">
+    android:columnCount="3"
+    android:padding="5dp"
+    android:background="@color/colorBackground">
 
 
     <Spinner
@@ -52,7 +54,10 @@
         android:layout_row="2"
         android:layout_columnWeight="1"
         android:layout_columnSpan="3"
-        android:onClick="onRollClick"/>
+        android:onClick="onRollClick"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
+        android:padding="10dp"/>
 
 
 </GridLayout>
