--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.bennettfalkenberg.initiative.MainActivity"
     android:columnCount="3"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="@color/colorBackground">
 
     <Spinner
         android:layout_width="wrap_content"
