--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -279,16 +279,18 @@
         android:layout_rowWeight="1"
         android:padding="5dp"
         android:gravity="center"/>
+
     <Button
         android:id="@+id/statsButton"
         android:layout_column="1"
+        android:layout_columnSpan="2"
+        android:layout_columnWeight="2"
         android:layout_row="13"
         android:layout_rowSpan="1"
-        android:layout_columnSpan="2"
         android:layout_rowWeight="1"
-        android:layout_columnWeight="2"
-        android:text="@string/roll_stats_button"
-        android:padding="5dp"
         android:background="@color/colorPrimary"
-        android:textColor="@color/colorAccent"/>
+        android:onClick="onRollStatsClicked"
+        android:padding="5dp"
+        android:text="@string/roll_stats_button"
+        android:textColor="@color/colorAccent" />
 </GridLayout>
