--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,21 +9,35 @@
     android:padding="10dp"
     android:background="@color/colorBackground">
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/characterList"
+    <TextView
+        android:id="@+id/currChar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="@string/current_character"
         android:layout_column="0"
         android:layout_row="0"
         android:layout_columnWeight="1"
-        android:layout_columnSpan="3"
+        android:layout_columnSpan="1"
+        android:layout_rowSpan="1"
+        android:layout_rowWeight=".3"
+        android:padding="5dp"
+        android:gravity="center"/>
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/characterList"
+        android:layout_column="1"
+        android:layout_row="0"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight=".3"
+        android:layout_columnSpan="2"
         android:padding="5dp"
         />
     <TextView
         android:id="@+id/strengthText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Str"
+        android:text="@string/strength_label"
         android:layout_column="0"
         android:layout_row="1"
         android:layout_columnSpan="1"
@@ -36,7 +50,7 @@
         android:id="@+id/dexterityText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Dex"
+        android:text="@string/dexterity_label"
         android:layout_column="0"
         android:layout_row="2"
         android:layout_columnSpan="1"
@@ -49,7 +63,7 @@
         android:id="@+id/constitutionText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Const"
+        android:text="@string/constitution_label"
         android:layout_column="0"
         android:layout_row="3"
         android:layout_columnSpan="1"
@@ -59,12 +73,12 @@
         android:padding="5dp"
         android:gravity="center"/>
     <TextView
-        android:id="@+id/currCharacter"
+        android:id="@+id/inventory"
         android:layout_height="0dp"
         android:layout_width="0dp"
-        android:text="currChar"
+        android:text="@string/inventory"
         android:layout_column="1"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_columnSpan="1"
         android:layout_rowSpan="1"
         android:layout_columnWeight="1.5"
@@ -72,12 +86,12 @@
         android:padding="5dp"
         android:gravity="center"/>
     <TextView
-        android:id="@+id/currCharacterName"
+        android:id="@+id/className"
         android:layout_height="0dp"
         android:layout_width="0dp"
-        android:text="name"
+        android:text="@string/class_name"
         android:layout_column="1"
-        android:layout_row="2"
+        android:layout_row="1"
         android:layout_columnSpan="1"
         android:layout_rowSpan="1"
         android:layout_columnWeight="1.5"
@@ -88,7 +102,7 @@
         android:id="@+id/currCharacterSkills"
         android:layout_height="0dp"
         android:layout_width="0dp"
-        android:text="skills"
+        android:text="@string/skills_label"
         android:layout_column="1"
         android:layout_row="3"
         android:layout_columnSpan="1"
@@ -101,7 +115,7 @@
         android:id="@+id/intelligenceText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Int"
+        android:text="@string/intelligence_label"
         android:layout_column="2"
         android:layout_row="1"
         android:layout_columnSpan="1"
@@ -114,7 +128,7 @@
         android:id="@+id/wisdomText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Wis"
+        android:text="@string/wisdom_label"
         android:layout_column="2"
         android:layout_row="2"
         android:layout_columnSpan="1"
@@ -127,7 +141,7 @@
         android:id="@+id/charismaText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Charisma"
+        android:text="@string/charisma_label"
         android:layout_column="2"
         android:layout_row="3"
         android:layout_columnSpan="1"
