--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -11,9 +11,9 @@
     <Spinner
         android:id="@+id/raceSpinner"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_column="0"
-        android:layout_row="0"
+        android:layout_row="1"
         android:layout_columnSpan="1"
         android:layout_rowSpan="1"
         android:layout_columnWeight="1"
@@ -22,9 +22,9 @@
     <Spinner
         android:id="@+id/classSpinner"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_row="0"
+        android:layout_row="1"
         android:layout_columnSpan="1"
         android:layout_rowSpan="1"
         android:layout_columnWeight="1"
@@ -33,24 +33,26 @@
     <EditText
         android:id="@+id/playerName"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_column="2"
+        android:layout_height="wrap_content"
         android:layout_row="0"
-        android:layout_columnSpan="2"
+        android:layout_column="0"
+        android:layout_columnSpan="4"
         android:layout_rowSpan="1"
-        android:hint="@string/name_hint"
-        android:layout_columnWeight="2"
+        android:layout_columnWeight="1"
         android:layout_rowWeight="1"
+        android:hint="@string/name_hint"
         android:padding="5dp"/>
     <Spinner
         android:id="@+id/alignmentSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_column="2"
         android:layout_row="1"
-        android:layout_column="0"
-        android:layout_columnSpan="4"
+        android:layout_columnSpan="2"
         android:layout_rowSpan="1"
-        android:layout_columnWeight="1"
+        android:layout_columnWeight="2"
+        android:layout_rowWeight="1"
+
         android:padding="5dp"
         />
     <TextView
@@ -93,7 +95,7 @@
         android:padding="5dp"
         android:gravity="center"/>
 
-    <TextView
+    <EditText
         android:id="@+id/strengthValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -103,6 +105,7 @@
         android:layout_row="3"
         android:layout_rowSpan="1"
         android:layout_rowWeight="1"
+        android:inputType="none"
         android:gravity="center"
         android:outlineProvider="paddedBounds"
         android:padding="5dp" />
@@ -143,7 +146,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:gravity="center"/>
-    <TextView
+    <EditText
         android:id="@+id/dexterityValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -154,7 +157,8 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:padding="5dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:inputType="none"/>
     <TextView
         android:id="@+id/constitutionLabel"
         android:layout_row="6"
@@ -168,7 +172,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:gravity="center"/>
-    <TextView
+    <EditText
         android:id="@+id/constitutionValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -179,7 +183,8 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:padding="5dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:inputType="none"/>
     <TextView
         android:id="@+id/equipmentLabel"
         android:layout_width="wrap_content"
@@ -217,7 +222,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:gravity="center"/>
-    <TextView
+    <EditText
         android:id="@+id/intelligenceValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -228,7 +233,8 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:padding="5dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:inputType="none"/>
     <TextView
         android:id="@+id/wisdomLabel"
         android:layout_row="10"
@@ -242,7 +248,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:gravity="center"/>
-    <TextView
+    <EditText
         android:id="@+id/wisdomValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -253,7 +259,8 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:padding="5dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:inputType="none"/>
     <TextView
         android:id="@+id/charismaLabel"
         android:layout_row="12"
@@ -267,7 +274,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:gravity="center"/>
-    <TextView
+    <EditText
         android:id="@+id/charismaValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -278,7 +285,8 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:padding="5dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:inputType="none"/>
 
     <Button
         android:id="@+id/statsButton"
